--- a/MonsterArchive.Server/MonsterArchive.Server.csproj
+++ b/MonsterArchive.Server/MonsterArchive.Server.csproj
@@ -13,6 +13,12 @@
 	<ItemGroup>
 		<!-- Update EPPlus to a modern version -->
 		<PackageReference Include="EPPlus" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
 
 		<!-- Pin SpaProxy to .NET 9 compatible version -->
 		<PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="9.0.11" />
@@ -26,6 +32,8 @@
 		</PackageReference>
 
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
+
+		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.11" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.11" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
